Explicitly specify toggle button padding to fix icons on iOS

--- a/src/components/toggle-buttons/toggle-buttons.css
+++ b/src/components/toggle-buttons/toggle-buttons.css
@@ -9,6 +9,7 @@
 
 .button {
     margin: 0;
+    padding: 0.25rem;
     border: 1px solid $ui-black-transparent;
     background: none;
     outline: none;
